--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bson": "npm:@ponomarevlad/bson@6.7.0-no-tla"
   },
   "devDependencies": {
-    "mongodb": "^6.2.0"
+    "mongodb": "^6.2.0",
+    "prettier": "^3.2.5"
   }
 }
