--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "license": "MIT",
   "dependencies": {
-    "realm-web": "2.0.1"
+    "realm-web": "npm:@ponomarevlad/realm-web"
   },
   "overrides": {
     "bson": "github:PonomareVlad/js-bson#no-tla"
